--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,7 @@
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-object">Object</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-ajax">Ajax</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-cookie">Cookie</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-line-follower">Line Follower</a></li>
         </ul>
         <ul class="nav navbar-nav pull-right">
             <li><a class="nav-link" href="http://gustawdaniel.pl/website">Author: Daniel Gustaw</a></li>
@@ -142,6 +143,15 @@
                 <p>If server don't works look at <a target="_blank" href="https://github.com/gustawdaniel/javascript_training">docs</a>.</p>
             </div>
         </div>
+    </div>
+
+    <div id="con-line-follower" class="container tab-pane">
+
+<!--        <div style="background: red; width: 1200px; height: 400px;"></div>-->
+
+        <canvas id="follower-map" width="1200" height="438"></canvas>
+<!--        <canvas id="my-house" width="2043" height="735"></canvas>-->
+
     </div>
 
     <script src="js/site.js"></script>
