Encore training and lineforllower improved

--- a/web/index.html
+++ b/web/index.html
@@ -54,11 +54,11 @@
                 <form>
                     <div class="form-group">
                         <label for="name">Username</label>
-                        <input id="name" type="text" class="form-control">
+                        <input id="name" type="text" class="form-control" autocomplete="username">
                     </div>
                     <div class="form-group">
                         <label for="pass">Password</label>
-                        <input id="pass" type="password" class="form-control">
+                        <input id="pass" type="password" class="form-control" autocomplete="current-password">
                     </div>
                     <br>
                     <input type="submit" class="btn btn-primary btn-block" value="Login">
@@ -146,11 +146,11 @@
         </div>
     </div>
 
-    <div id="con-line-follower" class="container tab-pane">
+    <div id="con-line-follower" class="fluid-container tab-pane text-xs-center">
 
 <!--        <div style="background: red; width: 1200px; height: 400px;"></div>-->
 
-        <canvas id="follower-map" width="1200" height="438"></canvas>
+        <canvas id="follower-map" width="1400" height="504"></canvas>
 <!--        <canvas id="my-house" width="2043" height="735"></canvas>-->
 
     </div>
