--- a/web/index.html
+++ b/web/index.html
@@ -157,6 +157,10 @@
 
     <div id="con-symfony" class="container tab-pane"></div>
 
+    <div id="follower-heatmap" style="width: 100%; height: 800px;" ></div>
+
+
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="js/site.js"></script>
 </body>
 </html>
